--- a/homework5/hw5/app/assets/stylesheets/application.css
+++ b/homework5/hw5/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+.w_on_b {
+	color: white;
+	background-color: black;
+}
+
+.default {
+	color: black;
+	background-color: white;
+}
